NetBSD Problem Report #50950

From www@NetBSD.org  Fri Mar 11 17:20:17 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 491767ACC7
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 11 Mar 2016 17:20:17 +0000 (UTC)
Message-Id: <20160311172016.78BA57ACC8@mollari.NetBSD.org>
Date: Fri, 11 Mar 2016 17:20:16 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/dev/usb/if_upgt.c:1314]: (style) Suspicious condition
X-Send-Pr-Version: www-1.0

>Number:         50950
>Category:       kern
>Synopsis:       src/sys/dev/usb/if_upgt.c:1314]: (style) Suspicious condition
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Mar 11 17:25:00 +0000 2016
>Closed-Date:    Sat Mar 12 01:43:48 +0000 2016
>Last-Modified:  Sat Mar 12 01:43:48 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160311
>Organization:
>Environment:
>Description:
src/sys/dev/usb/if_upgt.c:1314]: (style) Suspicious condition (assignment + comparison); Clarify expression with parentheses.


Source code is

    if ((error = ieee80211_media_change(ifp) != ENETRESET))
        return error;


Maybe better code

   if ((error = ieee80211_media_change(ifp)) != ENETRESET)
        return error;













>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50950 CVS commit: src/sys/dev/usb
Date: Fri, 11 Mar 2016 13:35:00 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Fri Mar 11 18:34:59 UTC 2016

 Modified Files:
 	src/sys/dev/usb: if_upgt.c

 Log Message:
 PR/50950: David Binderman: Fix misplaced parens


 To generate a diff of this commit:
 cvs rdiff -u -r1.12 -r1.13 src/sys/dev/usb/if_upgt.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 12 Mar 2016 01:43:48 +0000
State-Changed-Why:
Christos committed it.
(btw, if christos or anyone else messes any of these up when committing,
be sure to let us know.)


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.