PR/50950: David Binderman: Fix misplaced parens